update list properties

--- a/index.html
+++ b/index.html
@@ -33,12 +33,25 @@
 			<div class="holder" id="tools">
 				<h3>What I build with:</h3>
 				<div id="toolset">
-					<i class="fab fa-html5"></i>
-					<i class="fab fa-css3-alt"></i>
-					<i class="fab fa-js"></i>
-					<i class="fab fa-react"></i>
-					<i class="fab fa-node"></i>
-
+					<ul>
+						<li>HTML5</li>
+						<li>CSS3</li>
+						<li>JS</li>
+						<li>Sass</li>
+						<li>LESS</li>
+						<li>Bootstrap</li>
+						<li>D3</li>
+						<li>jQuery</li>
+						<li>Node</li>
+						<li>Lodash</li>
+						<li>Jasmine</li>
+						<li>ExpressJS</li>
+						<li>React</li>
+						<li>Redux</li>
+						<li>MongoDB</li>
+						<li>mySQL</li>
+						<li>PostgreSQL</li>
+					</ul>
 				</div>
 			</div>
 			<div class="holder" id="companies">
@@ -60,7 +73,15 @@
 		<section id="contact">
 			<h3>Contact:</h3>
 			<div class ="holder" id="contact-container">
-				<p>Put contact info here</p>
+				<form>
+					<input class="contact-form" type="email" name="email" placeholder="Email Address" required/>
+					<textarea class="contact-form" cols="75" required> </textarea>
+					<button>Submit</button>
+				</form>
+			</div>
+			<div class ="holder" id="contact-about">
+				<h3>Fun fact:</h3>
+				<p id="fun-fact">Today's fun fact is: </p>
 			</div>
 		</section>
 		<footer>
