start blog styles

--- a/index.html
+++ b/index.html
@@ -66,7 +66,31 @@
 		<section id="blog">
 			<div class ="holder" id="blog-container">
 				<h3>Top blog posts:</h3>
-				<p>Put 2-3 blog posts here</p>
+				<div class="blog-post">
+					<img src="https://mbtskoudsalg.com/images250_/8-bit-mario-png-6.png" height="100px" />
+					<h4>Blog Title</h4>
+					<div id="post-info">
+						<p class="snippet">We're acquainted with the wormhole phenomenon, but this... Is a remarkable piece of bio-electronic engineering by which I see much of the EM spectrum ranging from heat and infrared through radio waves, et cetera, and forgive me if I've said and listened to this a thousand times. This planet's interior heat provides an abundance of geothermal energy. We need to neutralize the homing signal....</p>
+						<a href="#">Read More</a>
+					</div>
+				</div>
+				<div class="blog-post">
+					<img src="https://mbtskoudsalg.com/images250_/8-bit-mario-png-6.png" height="100px" />
+					<h4>Blog Title</h4>
+					<div id="post-info">
+						<p class="snippet">We're acquainted with the wormhole phenomenon, but this... Is a remarkable piece of bio-electronic engineering by which I see much of the EM spectrum ranging from heat and infrared through radio waves, et cetera, and forgive me if I've said and listened to this a thousand times. This planet's interior heat provides an abundance of geothermal energy. We need to neutralize the homing signal....</p>
+						<a href="#">Read More</a>
+					</div>
+				</div>
+				<div class="blog-post">
+					<img src="https://mbtskoudsalg.com/images250_/8-bit-mario-png-6.png" height="100px" />
+					<h4>Blog Title</h4>
+					<div id="post-info">
+						<p class="snippet">We're acquainted with the wormhole phenomenon, but this... Is a remarkable piece of bio-electronic engineering by which I see much of the EM spectrum ranging from heat and infrared through radio waves, et cetera, and forgive me if I've said and listened to this a thousand times. This planet's interior heat provides an abundance of geothermal energy. We need to neutralize the homing signal....</p>
+						<a href="#">Read More</a>
+					</div>
+				</div>
+
 				<a href="/blog">See more posts</a>
 			</div>
 		</section>
