cv formatting and update link styles

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 			</ul>
 		</nav>
 		<header>
+			<div id="headline">
 			<h1>Christina M Simmons</h1>
 				<h3>Full-stack web developer in California</h3>
+			</div>
 		</header>
 		<section id="cv">
 			<div class="holder" id="work-carousel">
@@ -45,6 +47,7 @@
 						<li>Node</li>
 						<li>Lodash</li>
 						<li>Jasmine</li>
+						<li>Chai</li>
 						<li>ExpressJS</li>
 						<li>React</li>
 						<li>Redux</li>
@@ -56,6 +59,18 @@
 			</div>
 			<div class="holder" id="companies">
 				<h3>Who I've worked for:</h3>
+					<div class="employer">
+						<h4>EMPLOYER NAME</h4>
+						<p><span>JOB TITLE</span> <span class="right-align">DATES</span></p>
+						<ul>
+							<li>Responsibilities</li>
+							<li>Responsibilities</li>
+							<li>Responsibilities</li>
+							<li>Responsibilities</li>
+						</ul>
+						<p>Projects</p>
+						<p>Project descriptions</p>
+					</div>
 				<p>LN</p>
 				<p>Self</p>
 				<p>Euclid Analytics</p>
@@ -99,7 +114,7 @@
 			<div class ="holder" id="contact-container">
 				<form>
 					<input class="contact-form" type="email" name="email" placeholder="Email Address" required/>
-					<textarea class="contact-form" cols="75" required> </textarea>
+					<textarea class="contact-form" cols="75" placeholder="Message" required></textarea>
 					<button>Submit</button>
 				</form>
 			</div>
